--- a/archives/2023/2023-03-02-8051-sfr-guide.md
+++ b/archives/2023/2023-03-02-8051-sfr-guide.md
@@ -1,104 +1,104 @@
-# 8051单片机特殊功能寄存器(SFR)详解
+# 8051 单片机特殊功能寄存器 (SFR) 详解
 
-51/52系列单片机片内有21/26个特殊功能寄存器。特殊功能寄存器（SFR，Special Function Register），又称专用寄存器，位于80H~FFH，但仅有21个字节（MCS-51系列）或26个字节（MCS-52子系列）作为SFR离散分布在这128个字节范围内，每个字节对应一个SFR。其余字节无定义，用户不能对这些单元进行读/写操作。
+51/52 系列单片机片内有 21/26 个特殊功能寄存器。特殊功能寄存器（SFR，Special Function Register），又称专用寄存器，位于 80H~FFH，但仅有 21 个字节（MCS-51 系列）或 26 个字节（MCS-52 子系列）作为 SFR 离散分布在这 128 个字节范围内，每个字节对应一个 SFR。其余字节无定义，用户不能对这些单元进行读/写操作。
 
 ## 概览
 
-26个SFR中，有12个的地址可被8整除，支持位寻址（bit-addressable）。
+26 个 SFR 中，有 12 个的地址可被 8 整除，支持位寻址（bit-addressable）。
 
-![SFR概览](/static/2023/2023-03-02-8051-sfr-guide_001.jpg)
+![SFR 概览图](/static/2023/2023-03-02-8051-sfr-guide_001.jpg)
 
-> 注：后 5 个带*的寄存器与定时器/计数器 2 有关，仅在 52 子系列芯片中存在。
+> 注：后 5 个带 \* 的寄存器与定时器/计数器 2 有关，仅在 52 子系列芯片中存在。
 
-![SFR位寻址表](/static/2023/2023-03-02-8051-sfr-guide_002.jpg)
+![SFR 地址分布图](/static/2023/2023-03-02-8051-sfr-guide_002.jpg)
 
 特殊功能寄存器反映了单片机的状态，是单片机的状态及控制字寄存器。可分为两类：
 
-- 芯片内部功能的控制用寄存器：运算部件寄存器A、B、PSW、堆栈指针SP、数据指针DPTR、各种定时/计数器控制、中断控制、串行口控制等；
-- 与芯片引脚有关的寄存器：P0、P1、P2、P3，它们实际上是4个锁存器，每个锁存器再附加上相应的一个输出驱动器和一个输入缓冲器就构成了一个并行口。
+- 芯片内部功能的控制用寄存器：运算部件寄存器 A、B、PSW、堆栈指针 SP、数据指针 DPTR、各种定时/计数器控制、中断控制、串行口控制等
+- 与芯片引脚有关的寄存器：P0、P1、P2、P3，它们实际上是 4 个锁存器，每个锁存器再附加上相应的一个输出驱动器和一个输入缓冲器就构成了一个并行口
 
-### 1. 累加器ACC
+## 1. 累加器 ACC
 
-Accumulator Register，应用最广泛的专用寄存器。许多单操作数指令的操作数、双操作数指令的一个操作数取自累加器。加、减、乘、除算术运算指令的结果都存放在累加器A或寄存器B中。累加器ACC的助记符是A，当对累加器的位进行操作时，常用符号是ACC，比如累加器D0位是"ACC.0"。
+Accumulator Register，应用最广泛的专用寄存器。许多单操作数指令的操作数、双操作数指令的一个操作数取自累加器。加、减、乘、除算术运算指令的结果都存放在累加器 A 或寄存器 B 中。累加器 ACC 的助记符是 A，当对累加器的位进行操作时，常用符号是 ACC，比如累加器 D0 位是 "ACC.0"。
 
-### 2. 寄存器B
+## 2. 寄存器 B
 
 B Register，用于乘除运算或作为一般寄存器。
 
-- 乘：两个操作数一个是累加器A，另一个必须是寄存器B，结果存在A和B中；
-- 除：被除数是累加器A，除数是寄存器B，商存在A中，余数存在B中。
+- **乘**：两个操作数一个是累加器 A，另一个必须是寄存器 B，结果存在 A 和 B 中
+- **除**：被除数是累加器 A，除数是寄存器 B，商存在 A 中，余数存在 B 中
 
-### 3. 程序状态字PSW
+## 3. 程序状态字 PSW
 
-Program State Word，存放着当前ALU的操作状态特征，其内部定义如下表。
+Program State Word，存放着当前 ALU 的操作状态特征，其内部定义如下表。
 
-![PSW寄存器](https://pic1.zhimg.com/80/v2-2ed2fb21535b7a033e3f18f0d01b099c_1440w.webp)
+![PSW 状态字](https://pic1.zhimg.com/80/v2-2ed2fb21535b7a033e3f18f0d01b099c_1440w.webp)
 
-### 4. 堆栈及堆栈指针SP
+## 4. 堆栈及堆栈指针 SP
 
-Stack Pointer，堆栈的特点是"先进后出"，是为程序调用和中断操作而设立的，主要是保护断点和保护现场。单片机中，CPU无论是执行**子程序调用操作**还是执行**中断操作**，最终都要返回，因此需预先把**主程序的被中断的地方**（称为断点）保护起来，为正确返回做准备，实现保护现场的功能。为使CPU能进行多级中断嵌套及多重子程序调用，堆栈必须有足够容量。
+Stack Pointer，堆栈的特点是"先进后出"，是为程序调用和中断操作而设立的，主要是保护断点和保护现场。单片机中，CPU 无论是执行**子程序调用操作**还是执行**中断操作**，最终都要返回，因此需预先把**主程序的被中断的地方**（称为断点）保护起来，为正确返回做准备，实现保护现场的功能。为使 CPU 能进行多级中断嵌套及多重子程序调用，堆栈必须有足够容量。
 
-堆栈指针SP，就是栈顶的存储单元地址。当堆栈无数据时，栈顶地址与栈底地址重合。51单片机的堆栈指针SP为8位寄存器，系统复位后，SP初值为07H，实际应用中通常根据需要在主程序开始处对堆栈指针SP进行初始化，一般在片内RAM的30H~7FH区域中开辟堆栈区，一般将SP设置为60H。
+堆栈指针 SP，就是栈顶的存储单元地址。当堆栈无数据时，栈顶地址与栈底地址重合。51 单片机的堆栈指针 SP 为 8 位寄存器，系统复位后，SP 初值为 07H，实际应用中通常根据需要在主程序开始处对堆栈指针 SP 进行初始化，一般在片内 RAM 的 30H~7FH 区域中开辟堆栈区，一般将 SP 设置为 60H。
 
-堆栈有向上生长型和向下生长型。MCS-51单片机的堆栈结构属于向上生长型，遵循**"先加后压"规则**：入栈时，先SP加1，然后数据写入栈；出栈时，先读出数据，再SP减1。
+堆栈有向上生长型和向下生长型。MCS-51 单片机的堆栈结构属于向上生长型，遵循**"先加后压"规则**：入栈时，先 SP 加 1，然后数据写入栈；出栈时，先读出数据，再 SP 减 1。
 
 堆栈的使用方式有两种：
 
-- 自动方式，在调用子程序或断点时，断点地址自动进入栈，程序返回时，断点地址再自动弹回PC，不需要用户干涉。
-- 指令方式，使用专用的堆栈操作指令进行入、出栈操作。例如保护现场、恢复现场。需要保护的数据单元量由用户设定。
+- **自动方式**：在调用子程序或断点时，断点地址自动进入栈，程序返回时，断点地址再自动弹回 PC，不需要用户干涉
+- **指令方式**：使用专用的堆栈操作指令进行入、出栈操作。例如保护现场、恢复现场。需要保护的数据单元量由用户设定
 
-### 5. 数据指针DPTR
+## 5. 数据指针 DPTR
 
-Data Pointer，既可是一个16位专用寄存器（DPTR），有16位数加"1"功能；也可拆开作为两个8位寄存器（高位字节寄存器DPH、低位字节寄存器DPL）。DPTR是继程序计数器（PC）以外的第二个16位寄存器，主要用途是保存16位地址信息，常用于基址加变址间接寄存器寻址方式使用，寻址片外64KB的数据存储器或程序存储器空间。
+Data Pointer，既可是一个 16 位专用寄存器（DPTR），有 16 位数加 "1" 功能；也可拆开作为两个 8 位寄存器（高位字节寄存器 DPH、低位字节寄存器 DPL）。DPTR 是继程序计数器（PC）以外的第二个 16 位寄存器，主要用途是保存 16 位地址信息，常用于基址加变址间接寄存器寻址方式使用，寻址片外 64KB 的数据存储器或程序存储器空间。
 
-### 7. 端口寄存器P0~P3
+## 7. 端口寄存器 P0~P3
 
-专用寄存器P0~P3分别是I/O端口P0~P3的8位锁存器，均为可位寻址寄存器。
+专用寄存器 P0~P3 分别是 I/O 端口 P0~P3 的 8 位锁存器，均为可位寻址寄存器。
 
-### 15. 定时/计数器TL0~TH1
+## 15. 定时/计数器 TL0~TH1
 
-51单片机有两个16位定时/计数器T0和T1，52比51多一个16位定时/计数器T2。它们都是由两个独立的8位寄存器TH和TL组成的16位寄存器。
+51 单片机有两个 16 位定时/计数器 T0 和 T1，52 比 51 多一个 16 位定时/计数器 T2。它们都是由两个独立的 8 位寄存器 TH 和 TL 组成的 16 位寄存器。
 
-### 11. 中断允许寄存器IE
+## 11. 中断允许寄存器 IE
 
-Interrupt Enable Register，字节地址为A8H。每一位对应不同的中断源，可设定为"允许(1)"或"禁止(0)"中断。单片机复位后会被清0。欲使某中断源允许中断，设置IE对应位的同时还必须设置IE中的最高位EA，使EA=1（CPU开放中断）。EA相当于中断允许的"总开关"。
+Interrupt Enable Register，字节地址为 A8H。每一位对应不同的中断源，可设定为"允许(1)"或"禁止(0)"中断。单片机复位后会被清 0。欲使某中断源允许中断，设置 IE 对应位的同时还必须设置 IE 中的最高位 EA，使 EA = 1（CPU 开放中断）。EA 相当于中断允许的"总开关"。
 
-![中断允许寄存器IE](/static/2023/2023-03-02-8051-sfr-guide_004.png)
+![IE 寄存器](/static/2023/2023-03-02-8051-sfr-guide_004.png)
 
-### 12. 中断优先级寄存器IP
+## 12. 中断优先级寄存器 IP
 
-Interrupt Priority Register，字节地址为B8H。每一位对应不同的中断源，其复位清"0"会把对应中断源设置为低优先级中断；置"1"将把对应中断源设置为高优先级。例如要使T0中断的优先级高于外部中断请求0中断，可将PX0清"0"、PTO置"1"。单片机复位后会被清0。
+Interrupt Priority Register，字节地址为 B8H。每一位对应不同的中断源，其复位清 "0" 会把对应中断源设置为低优先级中断；置 "1" 将把对应中断源设置为高优先级。例如要使 T0 中断的优先级高于外部中断请求 0 中断，可将 PX0 清 "0"、PTO 置 "1"。单片机复位后会被清 0。
 
-![中断优先级寄存器IP](/static/2023/2023-03-02-8051-sfr-guide_005.jpg)
+![IP 寄存器](/static/2023/2023-03-02-8051-sfr-guide_005.jpg)
 
-### 13. 定时器工作方式寄存器TMOD
+## 13. 定时器工作方式寄存器 TMOD
 
-Timer Mode，D0~D3管理T0，D4~D7管理T1。
+Timer Mode，D0~D3 管理 T0，D4~D7 管理 T1。
 
-![定时器工作方式寄存器TMOD](/static/2023/2023-03-02-8051-sfr-guide_006.jpg)
+![TMOD 寄存器](/static/2023/2023-03-02-8051-sfr-guide_006.jpg)
 
-### 14. 定时器控制寄存器TCON
+## 14. 定时器控制寄存器 TCON
 
-Timer Control Register，属于中断标志位寄存器。字节地址为88H，主要用来控制2个定时/计数器溢出中断标志及2个外部中断INT0和INT1请求标志。
+Timer Control Register，属于中断标志位寄存器。字节地址为 88H，主要用来控制 2 个定时/计数器溢出中断标志及 2 个外部中断 INT0 和 INT1 请求标志。
 
-![定时器控制寄存器TCON](/static/2023/2023-03-02-8051-sfr-guide_007.jpg)
+![TCON 寄存器](/static/2023/2023-03-02-8051-sfr-guide_007.jpg)
 
-### 19. 串行口控制寄存器SCON
+## 19. 串行口控制寄存器 SCON
 
-Serial Control Register，属于中断标志位寄存器。字节地址为98H。与中断相关是SCON的低2位，用来锁存串行口的发送（Transmit）中断和接收（Receive）中断标志。
+Serial Control Register，属于中断标志位寄存器。字节地址为 98H。与中断相关是 SCON 的低 2 位，用来锁存串行口的发送（Transmit）中断和接收（Receive）中断标志。
 
-![串行口控制寄存器SCON](/static/2023/2023-03-02-8051-sfr-guide_008.jpg)
+![SCON 寄存器](/static/2023/2023-03-02-8051-sfr-guide_008.jpg)
 
-### 20. 串行数据寄存器SBUF
+## 20. 串行数据寄存器 SBUF
 
-Serial Buffer，用于串行通信，存放发送和接收数据。逻辑上是一个寄存器，物理上是两个寄存器：发送缓冲寄存器、接收缓冲寄存器，使用同一个逻辑地址，写入时SBUF指向发送数据缓冲器、读入时SBUF取自接收缓冲寄存器。
+Serial Buffer，用于串行通信，存放发送和接收数据。逻辑上是一个寄存器，物理上是两个寄存器：发送缓冲寄存器、接收缓冲寄存器，使用同一个逻辑地址，写入时 SBUF 指向发送数据缓冲器、读入时 SBUF 取自接收缓冲寄存器。
 
-串行口对外有两条独立的收、发信号线：RXD和TXD，可以同时发送和接收数据，实现全双工传送。例：
+串行口对外有两条独立的收、发信号线：RXD 和 TXD，可以同时发送和接收数据，实现全双工传送。
 
-![串行口通信示例](/static/2023/2023-03-02-8051-sfr-guide_009.png)
+![串行通信时序](/static/2023/2023-03-02-8051-sfr-guide_009.png)
 
-### 21. 电源控制寄存器PCON
+## 21. 电源控制寄存器 PCON
 
-Power Control Register，电源控制及波特率选择寄存器，字节地址为87H。
+Power Control Register，电源控制及波特率选择寄存器，字节地址为 87H。
 
-![电源控制寄存器PCON](/static/2023/2023-03-02-8051-sfr-guide_010.png)
+![PCON 寄存器](/static/2023/2023-03-02-8051-sfr-guide_010.png)
