--- a/archives/2023/2023-03-07-74hc138-truth-table.md
+++ b/archives/2023/2023-03-07-74hc138-truth-table.md
@@ -1,25 +1,26 @@
-# 74HC138真值表
+# 74HC138 真值表
 
-## 74HC138：三八译码器
+**74HC138：三八译码器**
 
-三八译码器就是把3种输入状态翻译成8种输出状态，74HC138在同一时刻只能让一个输出口为低电平。
+三八译码器就是把 3 种输入状态翻译成 8 种输出状态，74HC138 在同一时刻只能让一个输出口为低电平。
 
-![74HC138引脚图](/static/2023/2023-03-07-74hc138-truth-table_001.png)
+![74HC138 芯片图](/static/2023/2023-03-07-74hc138-truth-table_001.png)
 
-## 74HC138真值表以及快速计算方法
+**74HC138 真值表以及快速计算方法：**
 
-![74HC138真值表](/static/2023/2023-03-07-74hc138-truth-table_002.png)
+![真值表](/static/2023/2023-03-07-74hc138-truth-table_002.png)
 
-快速计算方法：将输入端的A B C看作成3位的二进制码。
+**快速计算方法**：将输入端的 A B C 看作成 3 位的二进制码
 
-![二进制码计算](/static/2023/2023-03-07-74hc138-truth-table_003.png)
+![快速计算方法](/static/2023/2023-03-07-74hc138-truth-table_003.png)
 
-通过8-4-2-1码来快速推算其值，将ABC看成是二进制数值。
+通过 8-4-2-1 码来快速推算其值，将 ABC 看成是二进制数值。
 
-> 例如：A、B、C输入都是高，111，对应4+2+1=7，Y7输出0；
->
-> 例如：A、B、C输入是：110，对应4+2+0=6，Y6输出0；
->
-> 例如：A、B、C输入是：011，对应0+2+1=3，Y3输出0；
->
-> 例如：A、B、C输入是：101，对应4+0+1=5，Y5输出0；
+**示例：**
+
+| A   | B   | C   | 二进制值 | 输出低电平 |
+|-----|-----|-----|----------|-----------|
+| 高  | 高  | 高  | 4+2+1=7  | Y7        |
+| 高  | 高  | 低  | 4+2+0=6  | Y6        |
+| 低  | 高  | 高  | 0+2+1=3  | Y3        |
+| 高  | 低  | 高  | 4+0+1=5  | Y5        |
